cluster/infra/config/envoy-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-class
  namespace: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-idletea
    protocol: HTTPS
    port: 443
    hostname: idletea.net
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: cert-idletea-net
    allowedRoutes:
      namespaces:
        from: All
  - name: https-echo
    protocol: HTTPS
    port: 443
    hostname: echo.idletea.net
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: cert-echo-idletea-net
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: envoy-gateway
spec:
  parentRefs:
  - name: envoy-gateway
    sectionName: http
  hostnames:
  - "*.net"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: strict-transport-security
          value: "max-age=63072000; includeSubDomains; preload"
